--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -10,6 +10,8 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" />
+    <link href="{% static 'css/default.css' %}" rel="stylesheet" />
+	<link rel="stylesheet" href="{% static 'css/animate.css' %}" />
 	<link rel="stylesheet" href="{% static 'js/fancybox/jquery.fancybox.css' %}" type="text/css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="{% static 'css/isotope.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -21,63 +23,16 @@
     <![endif]-->
   </head>
   <body>
-    <header>
-		<div class="main-menu">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">			Hidayah
-						</a></h1>
-					</div>
-					<div class="col-md-8">
-						<div class="dropdown">
-							<ul class="nav nav-pills">
-							    <li class="active"><a href="index.html">Home</a></li>
-								<li><a href="Portfolio.html">Portfolio</a></li>
-							    <li><a href="Blog.html">Blog</a></li>
-								<li><a href="Contact.html">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<div class="slider">
-        <img src="{% static 'img/bg-main1.jpg' %}" alt="" class="img-responsive"/>
-    </div>
+
+  	{% include 'inc/_header.html' %}
 
     {% block content %}
 
     {% endblock %}
 
-	<footer>
-		<section id="footer" class="section footer">
-			<div class="container">
-				<div class="row animated opacity mar-bot20" data-andown="fadeIn" data-animation="animation">
-					<div class="col-sm-12 align-center">
-						<ul class="social-network social-circle">
-							<li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
-							<li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row align-center copyright">
-					<div class="col-sm-12"><p>Copyright &copy; 2014 Hidayah - by <a href="http://bootstraptaste.com">Bootstraptaste</a></p></div>
-                    <!--
-                        All links in the footer should remain intact.
-                        Licenseing information is available at: http://bootstraptaste.com/license/
-                        You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Hidayah
-                    -->
-				</div>
-			</div>
-		</section>
-		<a href="#" class="scrollup"><i class="fa fa-chevron-up"> </i></a>
-	</footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	{% include 'inc/_footer.html' %}
+
+   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -85,5 +40,9 @@
 	<script src="{% static 'js/fancybox/jquery.fancybox.pack.js' %}"></script>
 	<script src="{% static 'js/wow.min.js' %}"></script>
 	<script src="{% static 'js/functions.js' %}"></script>
+  	<script type="text/javascript">
+
+		new WOW().init()
+	</script>
   </body>
 </html>
