--- a/config/blog/templates/blog/blog.html
+++ b/config/blog/templates/blog/blog.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %} {{ title }} | {{ block.super }} {% endblock %}
+
 {% block content %}
 <div class="row mar-bot40">
     <div class="col-md-offset-3 col-md-6">
@@ -63,6 +66,33 @@
                         <a href="#" class="pull-right">Continue reading <i class="icon-angle-right"></i></a>
                     </div>
                 </article>
+
+                {% for post in posts %}
+                <article>
+                    <div class="post-video">
+                        <div class="post-heading">
+                            <h3><a href="#">{{ post.title }}</a></h3>
+                        </div>
+                        {% if post.photo %}
+                        <img src="{{ post.photo.url }}" alt=""/>
+                        {% else %}
+                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" alt=""/>
+                        {% endif %}
+                    </div>
+                    <p>
+                        {{ post.content|safe|linebreaks|truncatewords:50 }}
+                    </p>
+                    <div class="bottom-article">
+                        <ul class="meta-post">
+                            <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a></li>
+                            <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
+                            <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
+                        </ul>
+                        <a href="{{ post.get_absolute_url }}" class="pull-right">Continue reading <i class="icon-angle-right"></i></a>
+                    </div>
+                </article>
+                {% endfor %}
                 <div id="pagination">
                     <span class="all">Page 1 of 3</span>
                     <span class="current">1</span>
@@ -71,7 +101,9 @@
                 </div>
             </div>
             <div class="col-lg-4">
+
                 {% include 'inc/_sidebar.html' %}
+
             </div>
         </div>
     </div>
