add view post in detail

--- a/config/blog/templates/blog/menu_tpl.html
+++ b/config/blog/templates/blog/menu_tpl.html
@@ -2,13 +2,8 @@
 <div class="widget">
     <h5 class="widgetheading">Categories</h5>
     <ul class="cat">
-        <li><i class="icon-angle-right"></i><a href="#">Web design</a><span> (20)</span></li>
-        <li><i class="icon-angle-right"></i><a href="#">Online business</a><span> (11)</span></li>
-        <li><i class="icon-angle-right"></i><a href="#">Marketing strategy</a><span> (9)</span></li>
-        <li><i class="icon-angle-right"></i><a href="#">Technology</a><span> (12)</span></li>
-        <li><i class="icon-angle-right"></i><a href="#">About finance</a><span> (18)</span></li>
         {% for item in categories %}
-        <li><i class="icon-angle-right"></i><a href="{{ item.get_absolute_url }}">{{ item.title }}</a><span
+        <li><i class="icon-angle-right"></i><a href="{{ item.get_absolute_url }}"><b>{{ item.title }}</b></a><span
                 class="badge bg-primary rounded-pill">{{ item.cnt }}</span></li>
         {% endfor %}
     </ul>
