--- a/config/blog/templates/blog/blog_detail.html
+++ b/config/blog/templates/blog/blog_detail.html
@@ -15,12 +15,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
-                {% for post in posts %}
                 <article>
                     <div class="post-image">
                         <div class="post-heading">
-                            <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
+                            <h3>{{ post.title }}</h3>
                         </div>
+
                         <div class="bottom-article">
                             <ul class="meta-post">
                                 <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
@@ -29,6 +29,7 @@
                                 <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
                             </ul>
                         </div>
+
                         {% if post.photo %}
                         <img src="{{ post.photo.url }}" alt=""/>
                         {% else %}
@@ -36,23 +37,19 @@
                         {% endif %}
                     </div>
                     <p>
-                        {{ post.content|safe|linebreaks|truncatewords:50 }}
+                        {{ post.content|safe }}
                     </p>
                     <div class="bottom-article">
                         <ul class="meta-post">
                             <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
                             </li>
                             <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="{{ post.category.get_absolute_url }}">{{ post.category }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="#">{{ post.views }}</a></li>
                             <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
                         </ul>
-                        <a href="{{ post.get_absolute_url }}" class="pull-right">Подробнее.. <i
-                                class="icon-angle-right"></i></a>
                     </div>
                 </article>
-                {% endfor %}
-
-                {% include 'inc/_pagination.html' %}
 
             </div>
             <div class="col-lg-4">
