--- a/config/blog/templates/blog/category.html
+++ b/config/blog/templates/blog/category.html
@@ -9,8 +9,7 @@
 <div class="row mar-bot40">
     <div class="col-md-offset-3 col-md-6">
         <div class="sections-header">
-            <h2>Дисклеймер</h2>
-            <p>О том, что это дисклеймер =)</p>
+            <h2></h2>
         </div>
     </div>
 </div>
@@ -22,8 +21,18 @@
                 <article>
                     <div class="post-video">
                         <div class="post-heading">
-                            <h3><a href="#">{{ post.title }}</a></h3>
+                            <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
                         </div>
+
+                        <div class="bottom-article">
+                            <ul class="meta-post">
+                                <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
+                                </li>
+                                <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
+                                <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
+                            </ul>
+                        </div>
+
                         {% if post.photo %}
                         <img src="{{ post.photo.url }}" alt=""/>
                         {% else %}
@@ -38,6 +47,7 @@
                             <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a></li>
                             <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
                             <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="#">Просмотры: {{ post.views }}</a></li>
                             <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
                         </ul>
                         <a href="{{ post.get_absolute_url }}" class="pull-right">Continue reading <i class="icon-angle-right"></i></a>
