--- a/config/templates/inc/_nav.html
+++ b/config/templates/inc/_nav.html
@@ -8,7 +8,7 @@
         <li {% if request.get_full_path == portfolio_url %}class="active" {% endif %}>
             <a href="{{ portfolio_url }}">Портфолио</a></li>
         {% url 'blog' as blog_url %}
-        <li {% if request.get_full_path == blog_url %}class="active" {% endif %}>
+        <li {% if blog_url in request.get_full_path %}class="active" {% endif %}>
             <a href="{{ blog_url }}">Блог</a></li>
         {% url 'contact' as contact_url %}
         <li {% if request.get_full_path == contact_url %}class="active" {% endif %}>
