--- a/config/blog/templates/blog/tags.html
+++ b/config/blog/templates/blog/tags.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+
+{% block title %}
+{{ category.title }} :: {{ block.super }}
+{% endblock %}
+
 {% load static %}
-
-{% block title %} {{ title }} | {{ block.super }} {% endblock %}
-
 {% block content %}
 <div class="row mar-bot40">
     <div class="col-md-offset-3 col-md-6">
@@ -15,10 +17,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
+                {% for post in posts %}
                 <article>
-                    <div class="post-image">
+                    <div class="post-video">
                         <div class="post-heading">
-                            <h3>{{ post.title }}</h3>
+                            <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
                         </div>
 
                         <div class="bottom-article">
@@ -37,29 +40,22 @@
                         {% endif %}
                     </div>
                     <p>
-                        {{ post.content|safe }}
+                        {{ post.content|safe|linebreaks|truncatewords:50 }}
                     </p>
                     <div class="bottom-article">
                         <ul class="meta-post">
-                            <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
-                            </li>
+                            <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a></li>
                             <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="{{ post.category.get_absolute_url }}">{{ post.category }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="#">{{ post.views }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
+                            <li><i class="icon-folder-open"></i><a href="#">Просмотры: {{ post.views }}</a></li>
                             <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
                         </ul>
-                    </div>
-                    <div class="bottom-article">
-                        <ul class="meta-post">
-                            {% if post.tags.exists %}
-                            <li><i class="icon-calendar"></i><a href="#">Tags: </a></li>
-                                {% for tag in post.tags.all %}
-                                <li><i class="icon-calendar"></i><a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
+                        <a href="{{ post.get_absolute_url }}" class="pull-right">Continue reading <i class="icon-angle-right"></i></a>
                     </div>
                 </article>
+                {% endfor %}
+
+                {% include 'inc/_pagination.html' %}
 
             </div>
             <div class="col-lg-4">
