--- a/config/templates/inc/_sidebar.html
+++ b/config/templates/inc/_sidebar.html
@@ -4,7 +4,7 @@
 <aside class="right-sidebar">
     <div class="widget">
         <form action="{% url 'search' %}" method="get" class="form-search">
-            <input class="form-control" type="text" name="s" placeholder="Search..">
+            <input class="form-control" type="text" name="s" placeholder="Поиск..">
         </form>
     </div>
         {% show_menu %}
