--- a/config/blog/templates/blog/menu_tpl.html
+++ b/config/blog/templates/blog/menu_tpl.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="widget">
-    <h5 class="widgetheading">Categories</h5>
+    <h5 class="widgetheading">Категории</h5>
     <ul class="cat">
         {% for item in categories %}
         <li><i class="icon-angle-right"></i><a href="{{ item.get_absolute_url }}"><b>{{ item.title }}</b></a><span
