--- a/config/blog/templates/blog/tags_tpl.html
+++ b/config/blog/templates/blog/tags_tpl.html
@@ -1,5 +1,5 @@
 <div class="widget">
-    <h5 class="widgetheading">Tags</h5>
+    <h5 class="widgetheading">Облако тегов</h5>
     <ul class="tags">
         {% for tag in tags %}
         <li><a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a></li>
