--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -1,48 +1,76 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} Добро пожаловать {% endblock %}</title>
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
-	<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" />
-    <link href="{% static 'css/default.css' %}" rel="stylesheet" />
-	<link rel="stylesheet" href="{% static 'css/animate.css' %}" />
-	<link rel="stylesheet" href="{% static 'js/fancybox/jquery.fancybox.css' %}" type="text/css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css/isotope.css' %}" media="screen" />
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}"/>
+    <link href="{% static 'css/default.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}"/>
+    <link rel="stylesheet" href="{% static 'js/fancybox/jquery.fancybox.css' %}" type="text/css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/isotope.css' %}" media="screen"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
 
-  	{% include 'inc/_header.html' %}
+{% include 'inc/_header.html' %}
 
-    {% block content %}
 
-    {% endblock %}
+<div class="container">
+    <div class="row">
 
-	{% include 'inc/_footer.html' %}
+        {% if request.user.is_authenticated %}
+        <span style="float:right; color:black">Добро пожаловать, {{ user.username }}</span><br/>
+        {% endif %}
 
-   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'js/jquery.isotope.min.js' %}"></script>
-	<script src="{% static 'js/fancybox/jquery.fancybox.pack.js' %}"></script>
-	<script src="{% static 'js/wow.min.js' %}"></script>
-	<script src="{% static 'js/functions.js' %}"></script>
-  	<script type="text/javascript">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == 'error' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% else %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+
+    </div>
+</div>
+
+
+{% block content %}
+
+{% endblock %}
+
+{% include 'inc/_footer.html' %}
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.isotope.min.js' %}"></script>
+<script src="{% static 'js/fancybox/jquery.fancybox.pack.js' %}"></script>
+<script src="{% static 'js/wow.min.js' %}"></script>
+<script src="{% static 'js/functions.js' %}"></script>
+<script type="text/javascript">
 
 		new WOW().init()
-	</script>
-  </body>
+
+
+</script>
+</body>
 </html>
