--- a/config/templates/inc/_nav.html
+++ b/config/templates/inc/_nav.html
@@ -13,5 +13,17 @@
         {% url 'contact' as contact_url %}
         <li {% if request.get_full_path == contact_url %}class="active" {% endif %}>
             <a href="{{ contact_url }}">Контакты</a></li>
+        {% if not request.user.is_authenticated %}
+        {% url 'register' as register_url %}
+        <li {% if request.get_full_path == register_url %}class="active" {% endif %}>
+            <a href="{{ register_url }}">Регистрация</a></li>
+        {% url 'user_login' as user_login_url %}
+        <li {% if request.get_full_path == login_url %}class="active" {% endif %}>
+            <a href="{{ user_login_url }}">Вход</a></li>
+        {% else %}
+        {% url 'user_logout' as user_logout_url %}
+        <li {% if request.get_full_path == user_logout_url %}class="active" {% endif %}>
+            <a href="{{ user_logout_url }}">Выход</a></li>
+        {% endif %}
     </ul>
 </div>
