--- a/config/blog/templates/blog/contact.html
+++ b/config/blog/templates/blog/contact.html
@@ -49,6 +49,15 @@
                 </form>
             </div>
         </div>
+            <h1>Обратная связь</h1>
+
+            <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary btn-block">Send</button>
+
+            </form>
+        <br>
     </div>
 </section>
 {% endblock %}
