--- a/config/blog/templates/blog/blog.html
+++ b/config/blog/templates/blog/blog.html
@@ -44,7 +44,7 @@
                             </li>
                             <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
                             <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
-                            <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
+                            <li><i class="icon-comments"></i><a href="#">{{comment_count}} Comments</a></li>
                         </ul>
                         <a href="{{ post.get_absolute_url }}" class="pull-right">Подробнее.. <i
                                 class="icon-angle-right"></i></a>
