--- a/config/config/static/css/style.css
+++ b/config/config/static/css/style.css
@@ -1,6 +1,6 @@
 /* ==== Google font ==== */
-@import url('http://fonts.googleapis.com/css?family=Lato:400,300,700,900');
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url('https://fonts.googleapis.com/css?family=Lato:400,300,700,900');
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 /* === fontawesome === */
 @import url('font-awesome.css');
 /* ==== overwrite bootstrap standard ==== */
