fix image display

--- a/config/blog/templates/blog/blog.html
+++ b/config/blog/templates/blog/blog.html
@@ -30,9 +30,9 @@
                             </ul>
                         </div>
                         {% if post.photo %}
-                        <img src="{{ post.photo.url }}" alt=""/>
+                        <img src="{{ post.photo.url }}" style="width:100%" alt=""/>
                         {% else %}
-                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" alt=""/>
+                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" style="width:100%" alt=""/>
                         {% endif %}
                     </div>
                     <p>
