--- a/config/blog/templates/blog/blog_detail.html
+++ b/config/blog/templates/blog/blog_detail.html
@@ -31,9 +31,9 @@
                         </div>
 
                         {% if post.photo %}
-                        <img src="{{ post.photo.url }}" alt=""/>
+                        <img src="{{ post.photo.url }}" style="width:100%"  alt=""/>
                         {% else %}
-                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" alt=""/>
+                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" style="width:100%" alt=""/>
                         {% endif %}
                     </div>
                     <p>
