--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Привет, Мир! Когда накипело получать на свои закладки ошибку 404, решил написать свой блог, чтобы больше не терялись..">
+    <meta name="keywords" content="блог, разработка, администрирование">
     <title>{% block title %} Добро пожаловать {% endblock %}</title>
     <link rel="shortcut icon" href="{% static '/img/favicon.ico' %}" type="image/x-icon">
     <!-- Bootstrap -->
