--- a/config/blog/templates/blog/category.html
+++ b/config/blog/templates/blog/category.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}
-{{ category.title }} :: {{ block.super }}
-{% endblock %}
+{% block description %} {{ category.title }} |{{ title }} {% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% load static %}
 {% block content %}
