--- a/config/blog/templates/blog/portfolio.html
+++ b/config/blog/templates/blog/portfolio.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block description %} {{ title }} {% endblock %}
+{% block title %} {{ title }} {% endblock %}
 {% block content %}
 <section id="section-works" class="section appear clearfix">
     <div class="container">
