--- a/config/blog/templates/blog/blog_detail.html
+++ b/config/blog/templates/blog/blog_detail.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} {{ title }} | {{ block.super }} {% endblock %}
+{% block description %}{{description}}{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block content %}
 <div class="row mar-bot40">
