--- a/config/blog/templates/blog/contact.html
+++ b/config/blog/templates/blog/contact.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block description %} {{ title }} {% endblock %}
+{% block title %} {{ title }} {% endblock %}
 {% block content %}
 <section id="content">
     <div class="map">
