--- a/config/blog/templates/blog/register.html
+++ b/config/blog/templates/blog/register.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Поиск | {{ block.super }} {% endblock %}
+{% block description %} {{ title }} {% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block content %}
 <hr>
