--- a/config/blog/templates/blog/blog.html
+++ b/config/blog/templates/blog/blog.html
@@ -5,63 +5,67 @@
 {% block title %} {{ title }} {% endblock %}
 
 {% block content %}
-<div class="row mar-bot40">
-    <div class="col-md-offset-3 col-md-6">
-        <div class="sections-header">
-            <h2></h2>
+<main id="main">
+    <div class="blog-page area-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="page-head-blog">
+                        {% for post in posts %}
+                        <div class="single-blog-page">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="single-blog">
+                                    <div class="single-blog-img">
+                                        <a href="{{ post.get_absolute_url }}">
+                                            {% if post.photo %}
+                                            <img src="{{ post.photo.url }}"
+                                                 style="width:100%"
+                                                 alt=""/>
+                                            {% else %}
+                                            <img src="https://picsum.photos/id/1060/536/354/?blur=2"
+                                                 style="width:100%"
+                                                 alt=""/>
+                                            {% endif %}
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="blog-meta">
+                                <span class="comments-type">
+                                  <i class="bi bi-chat"></i>
+                                  <a href="{{ post.get_absolute_url }}">{{comment_count}} comments</a>
+                                </span>
+                                    <span class="date-type">
+                                  <i class="bi bi-calendar"></i>{{ post.created_at|date:"Y-m-d H:i:s" }}
+                                </span>
+                                </div>
+                                <div class="blog-text">
+                                    <h4>
+                                        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                                    </h4>
+                                    <p>
+                                        {{ post.description|safe|linebreaks }}
+                                    </p>
+                                </div>
+                                <span>
+                                    <a href="{{ post.get_absolute_url }}"
+                                       class="ready-btn">Подробнее..</a>
+                                  </span>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% include 'inc/_pagination.html' %}
+                </div>
+
+                <div class="col-lg-4">
+
+                    {% include 'inc/_sidebar.html' %}
+
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<section id="content">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                {% for post in posts %}
-                <article>
-                    <div class="post-image">
-                        <div class="post-heading">
-                            <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
-                        </div>
-                        <div class="bottom-article">
-                            <ul class="meta-post">
-                                <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
-                                </li>
-                                <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                                <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
-                            </ul>
-                        </div>
-                        {% if post.photo %}
-                        <img src="{{ post.photo.url }}" style="width:100%" alt=""/>
-                        {% else %}
-                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" style="width:100%" alt=""/>
-                        {% endif %}
-                    </div>
-                    <p>
-                        {{ post.description|safe|linebreaks }}
-                    </p>
-                    <div class="bottom-article">
-                        <ul class="meta-post">
-                            <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
-                            </li>
-                            <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
-                            <li><i class="icon-comments"></i><a href="#">{{comment_count}} Comments</a></li>
-                        </ul>
-                        <a href="{{ post.get_absolute_url }}" class="pull-right">Подробнее.. <i
-                                class="icon-angle-right"></i></a>
-                    </div>
-                </article>
-                {% endfor %}
 
-                {% include 'inc/_pagination.html' %}
+</main><!-- End #main -->
 
-            </div>
-            <div class="col-lg-4">
-
-                {% include 'inc/_sidebar.html' %}
-
-            </div>
-        </div>
-    </div>
-</section>
 {% endblock content %}
