--- a/config/blog/templates/blog/blog_detail.html
+++ b/config/blog/templates/blog/blog_detail.html
@@ -5,13 +5,6 @@
 {% block title %} {{ title }} {% endblock %}
 
 {% block content %}
-<div class="row mar-bot40">
-    <div class="col-md-offset-3 col-md-6">
-        <div class="sections-header">
-            <h2></h2>
-        </div>
-    </div>
-</div>
 <section id="content">
     <div class="container">
         <div class="row">
@@ -61,7 +54,7 @@
                         </ul>
                     </div>
                     <h4 class="mt-5">HoBый комментарий</h4>
-                    <form action=""  enctype = "multiparty/form-data"  method="post">
+                    <form action="" method="post">
                         {% csrf_token %}
 
                         {{ form.as_p }}
