--- a/config/blog/templates/blog/restore_password.html
+++ b/config/blog/templates/blog/restore_password.html
@@ -5,21 +5,30 @@
 {% block title %} {{ title }} {% endblock %}
 
 {% block content %}
-<hr>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-4">
+<main id="main">
 
-            <h2>Восстановление пароля</h2>
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-primary btn-block">Восстановить пароль</button>
-            </form>
+    {% include 'inc/_breadcrumb.html' %}
 
+    <section class="inner-page">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="row">
+                        <h2>Восстановление пароля</h2>
+                        <form method="post"
+                              enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit"
+                                    class="btn btn-primary btn-block">Восстановить пароль
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<hr>
+    </section>
+
+</main><!-- End #main -->
 
 {% endblock content %}
