--- a/config/blog/templates/blog/restore_password.html
+++ b/config/blog/templates/blog/restore_password.html
@@ -6,15 +6,13 @@
 
 {% block content %}
 <main id="main">
-
-    {% include 'inc/_breadcrumb.html' %}
-
-    <section class="inner-page">
+    {% include 'inc/_header_blog.html' %}
+    <div class="blog-page area-padding">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <div class="row">
-                        <h2>Восстановление пароля</h2>
+                        <h4>Восстановление пароля</h4>
                         <form method="post"
                               enctype="multipart/form-data">
                             {% csrf_token %}
@@ -27,7 +25,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 </main><!-- End #main -->
 
