--- a/config/blog/templates/blog/blog.html
+++ b/config/blog/templates/blog/blog.html
@@ -6,37 +6,43 @@
 
 {% block content %}
 <main id="main">
+
+    {% include 'inc/_header_blog.html' %}
+
     <div class="blog-page area-padding">
         <div class="container">
             <div class="row">
+
+                <!-- Start left sidebar -->
+                {% include 'inc/_sidebar.html' %}
+                <!-- End left sidebar -->
+
+                <!-- Start single blog -->
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <div class="page-head-blog">
+                    <div class="row">
                         {% for post in posts %}
-                        <div class="single-blog-page">
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <div class="single-blog">
-                                    <div class="single-blog-img">
-                                        <a href="{{ post.get_absolute_url }}">
-                                            {% if post.photo %}
-                                            <img src="{{ post.photo.url }}"
-                                                 style="width:100%"
-                                                 alt=""/>
-                                            {% else %}
-                                            <img src="https://picsum.photos/id/1060/536/354/?blur=2"
-                                                 style="width:100%"
-                                                 alt=""/>
-                                            {% endif %}
-                                        </a>
-                                    </div>
+                        <div class="col-md-12 col-sm-12 col-xs-12">
+                            <div class="single-blog">
+                                <div class="single-blog-img">
+                                    <a href="{{ post.get_absolute_url }}">
+                                        {% if post.photo %}
+                                        <img src="{{ post.photo.url }}"
+                                             alt="">
+                                        {% else %}
+                                        <img src="{% static '/img/plug.jpg' %}"
+                                             width="85%"
+                                             alt="">
+                                        {% endif %}
+                                    </a>
                                 </div>
                                 <div class="blog-meta">
-                                <span class="comments-type">
-                                  <i class="bi bi-chat"></i>
-                                  <a href="{{ post.get_absolute_url }}">{{comment_count}} comments</a>
-                                </span>
+                                    <span class="comments-type">
+                                        <i class="bi bi-chat"></i>
+                                        <a href="{{ post.get_absolute_url }}">{{comment_count}} comments</a>
+                                    </span>
                                     <span class="date-type">
-                                  <i class="bi bi-calendar"></i>{{ post.created_at|date:"Y-m-d H:i:s" }}
-                                </span>
+                                        <i class="bi bi-calendar"></i>{{ post.created_at|date:"Y-m-d H:i:s" }}
+                                    </span>
                                 </div>
                                 <div class="blog-text">
                                     <h4>
@@ -49,18 +55,14 @@
                                 <span>
                                     <a href="{{ post.get_absolute_url }}"
                                        class="ready-btn">Подробнее..</a>
-                                  </span>
+                                </span>
                             </div>
                         </div>
                         {% endfor %}
+
+                        {% include 'inc/_pagination.html' %}
+
                     </div>
-                    {% include 'inc/_pagination.html' %}
-                </div>
-
-                <div class="col-lg-4">
-
-                    {% include 'inc/_sidebar.html' %}
-
                 </div>
             </div>
         </div>
