--- a/config/blog/templates/blog/blog_add_post.html
+++ b/config/blog/templates/blog/blog_add_post.html
@@ -5,78 +5,38 @@
 {% block title %} {{ title }} {% endblock %}
 
 {% block content %}
-<div class="row mar-bot40">
-    <div class="col-md-offset-3 col-md-6">
-        <div class="sections-header">
-            <h2></h2>
-        </div>
-    </div>
-</div>
-<section id="content">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <article>
-                    <form action="{% url 'blog_add_post' %}" method="post">
-                    {% csrf_token %}
+<main id="main">
 
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary btn-block">Добавить запись</button>
-                    </form>
-                    {% comment %}
-                    <div class="post-image">
-                        <div class="post-heading">
-                            <h3>{{ post.title }}</h3>
-                        </div>
+    {% include 'inc/_header_blog.html' %}
 
-                        <div class="bottom-article">
-                            <ul class="meta-post">
-                                <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
-                                </li>
-                                <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                                <li><i class="icon-folder-open"></i><a href="#">{{ post.category }}</a></li>
-                            </ul>
-                        </div>
+    <div class="blog-page area-padding">
+        <div class="container">
+            <div class="row">
 
-                        {% if post.photo %}
-                        <img src="{{ post.photo.url }}" alt=""/>
-                        {% else %}
-                        <img src="https://picsum.photos/id/1060/536/354/?blur=2" alt=""/>
-                        {% endif %}
-                    </div>
-                    <p>
-                        {{ post.content|safe }}
-                    </p>
-                    <div class="bottom-article">
-                        <ul class="meta-post">
-                            <li><i class="icon-calendar"></i><a href="#">{{ post.created_at|date:"Y-m-d H:i:s" }}</a>
-                            </li>
-                            <li><i class="icon-user"></i><a href="#">{{ post.author }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="{{ post.category.get_absolute_url }}">{{ post.category }}</a></li>
-                            <li><i class="icon-folder-open"></i><a href="#">{{ post.views }}</a></li>
-                            <li><i class="icon-comments"></i><a href="#">4 Comments</a></li>
-                        </ul>
-                    </div>
-                    <div class="bottom-article">
-                        <ul class="meta-post">
-                            {% if post.tags.exists %}
-                            <li><i class="icon-calendar"></i><a href="#">Tags: </a></li>
-                                {% for tag in post.tags.all %}
-                                <li><i class="icon-calendar"></i><a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a></li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
-                    </div>
-                    {% endcomment %}
-                </article>
-
-            </div>
-            <div class="col-lg-4">
-
+                <!-- Start left sidebar -->
                 {% include 'inc/_sidebar.html' %}
+                <!-- End left sidebar -->
 
+                <!-- Start single blog -->
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="row">
+                        <article class="blog-post-wrapper">
+                            <form action="{% url 'blog_add_post' %}"
+                                  method="post">
+                                {% csrf_token %}
+
+                                {{ form.as_p }}
+                                <div class="text-center">
+                                    <button type="submit"
+                                            class="btn btn-primary btn-block">Добавить запись
+                                    </button>
+                                </div>
+                            </form>
+                        </article>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</main>
 {% endblock content %}
