--- a/config/blog/templates/blog/login.html
+++ b/config/blog/templates/blog/login.html
@@ -6,15 +6,15 @@
 
 {% block content %}
 <main id="main">
-
-    {% include 'inc/_breadcrumb.html' %}
-
-    <section class="inner-page">
-        <div class="container-fluid">
+    {% include 'inc/_header_blog.html' %}
+    <div class="blog-page area-padding">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <div class="row">
-                        <h2>Авторизация</h2>
+
+                        <h4>Авторизация</h4>
+
                         {% if user.is_authenticated %}
                         <p>Вы уже выполнили вход</p>
                         {% else %}
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 </main><!-- End #main -->
 
