--- a/config/blog/templates/blog/menu_tpl.html
+++ b/config/blog/templates/blog/menu_tpl.html
@@ -1,10 +1,13 @@
 {% load static %}
-<div class="widget">
-    <h5 class="widgetheading">Категории</h5>
-    <ul class="cat">
-        {% for item in categories %}
-        <li><i class="icon-angle-right"></i><a href="{{ item.get_absolute_url }}"><b>{{ item.title }}</b></a><span
-                class="badge bg-primary rounded-pill">{{ item.cnt }}</span></li>
-        {% endfor %}
-    </ul>
+<div class="single-blog-page">
+    <div class="left-blog">
+        <h4>Категории</h4>
+        <ul>
+            {% for item in categories %}
+            <li>
+                <a href="{{ item.get_absolute_url }}">{{ item.title }} {{ item.cnt }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
