--- a/config/blog/templates/blog/register.html
+++ b/config/blog/templates/blog/register.html
@@ -7,15 +7,13 @@
 {% block content %}
 
 <main id="main">
-
-    {% include 'inc/_breadcrumb.html' %}
-
-    <section class="inner-page">
+    {% include 'inc/_header_blog.html' %}
+    <div class="blog-page area-padding">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <div class="row">
-                        <h1>Регистрация</h1>
+                        <h4>Регистрация</h4>
                         <form method="post">
                             {% csrf_token %}
                             {{ form.as_p }}
@@ -27,7 +25,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 </main><!-- End #main -->
 
