--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -13,7 +13,7 @@
     <link href="{% static '/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static '/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
@@ -21,59 +21,22 @@
   <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="{% static '/css/style.css' %}" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Hidayah - v4.6.0
-  * Template URL: https://bootstrapmade.com/hidayah-free-simple-html-template-for-corporate/
+  * Template Name: eBusiness - v4.6.0
+  * Template URL: https://bootstrapmade.com/ebusiness-bootstrap-corporate-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
 
+<body>
+
 {% include 'inc/_header.html' %}
-
-
-<div class="container bg-transparent">
-    <div class="row">
-        {% if request.user.is_authenticated %}
-        <p>
-        <p>
-        <p>
-        <p>
-        <p>
-        <p>
-
-        <span style="float:right; color:black">Добро пожаловать, {{ user.username }}</span><br/>
-        {% else %}
-        <p>
-        <p>
-        <p>
-        <p>
-        <p>
-        {% endif %}
-
-        {% if messages %}
-            {% for message in messages %}
-                {% if message.tags == 'error' %}
-                <div class="alert alert-danger" role="alert">
-                    {{ message }}
-                </div>
-                {% else %}
-                <div class="alert alert-{{ message.tags }}" role="alert">
-                    {{ message }}
-                </div>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-
-    </div>
-</div>
-
 
 {% block content %}
 
@@ -89,9 +52,7 @@
   <script src="{% static '/vendor/glightbox/js/glightbox.min.js' %}"></script>
   <script src="{% static '/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
   <script src="{% static '/vendor/php-email-form/validate.js' %}"></script>
-  <script src="{% static '/vendor/purecounter/purecounter.js' %}"></script>
   <script src="{% static '/vendor/swiper/swiper-bundle.min.js' %}"></script>
-  <script src="{% static '/vendor/waypoints/noframework.waypoints.js' %}"></script>
 
   <!-- Template Main JS File -->
   <script src="{% static '/js/main.js' %}"></script>
