--- a/config/templates/inc/_pagination.html
+++ b/config/templates/inc/_pagination.html
@@ -1,22 +1,32 @@
 {% if page_obj.has_other_pages %}
-<div id="pagination">
-    <span class="all">Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}</span>
+<div class="blog-pagination">
 
-    {% if page_obj.has_previous %}
-    <a class="inactive" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Предыдущий</a>
-    {% endif %}
+    <ul class="pagination">
 
-    {% for p in page_obj.paginator.page_range %}
-    {% if page_obj.number == p %}
-    <span class="current">{{ p }}</span>
-    {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
-    <a href="?page={{ p }}" class="inactive">{{ p }}</a>
-    {% endif %}
-    {% endfor %}
+        {% if page_obj.has_previous %}
+        <li class="page-item"><a class="page-link"
+                                 href="?page={{ page_obj.previous_page_number }}"
+                                 tabindex="-1">Предыдущий</a></li>
+        {% endif %}
 
-    {% if page_obj.has_next %}
-    <a class="inactive" href="?page={{ page_obj.next_page_number }}">Далее</a>
-    {% endif %}
+        {% for p in page_obj.paginator.page_range %}
+        {% if page_obj.number == p %}
+        <li class="page-item active"><a href="?page={{ p }}"
+                                        class="page-link">{{ p }}</a></li>
+        {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+        <li class="page-item"><a href="?page={{ p }}"
+                                 class="page-link">{{ p }}</a></li>
+        {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+        <li class="page-item"><a class="page-link"
+                                 href="?page={{ page_obj.next_page_number }}">Далее</a></li>
+        {% endif %}
+
+    </ul>
+
+    <!--    <span class="all">Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}</span>-->
 
 </div>
 {% endif %}
