--- a/config/templates/inc/_sidebar.html
+++ b/config/templates/inc/_sidebar.html
@@ -1,20 +1,34 @@
 {% load static %}
 {% load menu %}
 {% load sidebar %}
-<aside class="right-sidebar">
-    <div class="widget">
-        <form action="{% url 'search' %}" method="get" class="form-search">
-            <input class="form-control" type="text" name="s" placeholder="Поиск..">
-        </form>
-    </div>
-    {% if request.user.is_authenticated %}
-    <div class="widget">
-    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'blog_add_post' %}">Добавить запись</a></li>
-    </div>
-    {% endif %}
+<div class="col-lg-4 col-md-4">
+    <div class="page-head-blog">
+        <div class="single-blog-page">
+            <form action="{% url 'search' %}"
+                  method="get"
+                  class="form-search">
+                <div class="search-option">
+                    <input type="text"
+                           name="s"
+                           placeholder="Поиск..">
+                    <button class="button"
+                            type="submit">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        {% if request.user.is_authenticated %}
+        <div class="single-blog-page">
+            <div class="left-blog">
+                <h4><a class="nav-link active"
+                       aria-current="page"
+                       href="{% url 'blog_add_post' %}">Добавить запись</a></h4>
+            </div>
+        </div>
+        {% endif %}
         {% show_menu %}
         {% get_popular 5 %}
         {% get_list_tags %}
-
-
-</aside>
+    </div>
+</div>
